[tool.poetry]
name = "power-stash"
version = "0.1.0"
description = "Python package to fetch, process and store electricity data from different providers."
authors = ["Badr Ben m'barek <badr.benb@gmail.com>"]
readme = "README.md"
packages = [{include = "power_stash"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pandas = "^2.1.4"
entsoe-py = "^0.6.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
sqlmodel = "^0.0.14"
pint = "^0.23"
psycopg2-binary = "^2.9.9"
typer = {extras = ["all"], version = "^0.9.0"}
dask = "^2024.1.0"
distributed = "^2024.1.0"
bokeh = ">=2.4.2,<3.0.dev0 || >=3.1.dev0"
tqdm = "^4.66.1"


[tool.poetry.group.geo.dependencies]
fiona = "^1.9.5"
shapely = "^2.0.2"
pyproj = "^3.6.1"
rtree = "^1.1.0"
geopandas = "^0.14.2"


[tool.poetry.group.viz.dependencies]
folium = "^0.15.1"
matplotlib = "^3.8.2"
mapclassify = "^2.6.1"
plotly = "^5.18.0"
nbformat = "^5.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
line-length = 100
indent-width = 4
# Use pydocstyle Google convention
# See https://www.pydocstyle.org/en/stable/error_codes.html
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413", "D100", "D101", "D107",
    "ANN101", "S101"
]
exclude = ["__init__.py"]
fixable = ["ALL"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.per-file-ignores]
"test*" = ["D", "ANN"]
